test/parse/bad-error-long-line.txt
;;; ERROR: 1
                                                                                                                                                                         whoops                      (; some text at the end of the line ;)
(;; STDERR ;;;
out/test/parse/bad-error-long-line.txt:2:170: error: unexpected token "whoops"
...                                  whoops                      (; some text...
                                     ^^^^^^
;;; STDERR ;;)
